--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class = "top-container">
                 <img class="top-cloud" src="Images/cloud.webp" alt="">
                 <h1>I am Prathamesh</h1>
-                <p>I am a <span>pro</span>grammer.</p>
+                <h2>a <span>pro</span>grammer.</h2>
                 <img class = "bottom-cloud" src="Images/cloud.webp" alt="">
                 <img class = "mountain" src="Images/mountain.png" alt="">
             </div>
