--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <img class="top-cloud" src="https://www.sanjay.website/cloud.png" alt="">
                 <h1>I am Prathamesh</h1>
                 <h2>a <span>pro</span>grammer.</h2>
-                <img class = "bottom-cloud" src="https://www.sanjay.website/cloud.png" alt="">
-                <img class = "mountain" src="https://www.sanjay.website/mountain.png" alt="">
+                <img class = "bottom-cloud" src="Images/cloud.png" alt="">
+                <img class = "mountain" src="Images/mountain.png" alt="">
             </div>
             <div class="middle-container">
                 <div class="profile">
