--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <body>
             
             <div class = "top-container">
-                <img class="top-cloud" src="https://www.sanjay.website/cloud.png" alt="">
+                <img class="top-cloud" src="Images/cloud.png" alt="">
                 <h1>I am Prathamesh</h1>
                 <h2>a <span>pro</span>grammer.</h2>
                 <img class = "bottom-cloud" src="Images/cloud.png" alt="">
@@ -30,14 +30,14 @@
                 <div class="skills">
                   <h2>My Skills.</h2>
                   <div class="skill-row">
-                    <img class="skill1" src="Images/programming.png" alt="">
-                    <h3>Lorem & Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                    <img class="skill1" src="Images/cpp-logo.png" alt="">
+                    <h3>C++ Programming and Problem Solving</h3>
+                    <p>Throughout my Engineering I have honed my skill in C++. I have also solved many problems on sites like Leetcode and Codechef using C++. I have also studied Data Structures and Algorithms in C++ language.</p>
                   </div>
                   <div class="skill-row">
                     <img class="skill2" src="Images/programming.png" alt="">
-                    <h3>Lorem Ipsum Dolor</h3>
-                    <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                    <h3>HTML and CSS</h3>
+                    <p>I recently started learning Web Development and I have learnt HTML and CSS. I am aspiring to be a full fledged Web Developer.</p>
                   </div>
                 </div>
                 <hr>
